crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__additional_false.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"additionalProperties\":false,\"properties\":{\"a\":{}}}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                obj.keys().all(|key| { matches!(key.as_str(), "a") })
            }
            _ => true,
        }
