crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__additional_schema_with_patterns.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"additionalProperties\":{\"type\":\"string\"},\"patternProperties\":{\"^x\":{\"type\":\"integer\"}},\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                let __object_pass = obj
                    .iter()
                    .all(|(key, instance)| {
                        let mut covered = false;
                        if key.as_str().starts_with("x") {
                            if !(match instance {
                                serde_json::Value::Number(n) => {
                                    jsonschema::__private::types::is_integer(n)
                                }
                                _ => false,
                            }) {
                                return false;
                            }
                            covered = true;
                        }
                        if !covered {
                            if !(instance.is_string()) {
                                return false;
                            }
                        }
                        true
                    });
                __object_pass
            }
            _ => false,
        }
