crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__all_of.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"allOf\":[{\"type\":\"string\"},{\"minLength\":1}]}"
expression: is_valid_body(schema)
---
(instance.is_string())
            && (match instance {
                serde_json::Value::String(s) => !s.is_empty(),
                _ => true,
            })
