crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__all_of_leading_empty.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"allOf\":[{},{\"type\":\"string\"}]}"
expression: is_valid_body(schema)
---
instance.is_string()
