crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__all_of_leading_false.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"allOf\":[false,{\"type\":\"string\"}]}"
expression: is_valid_body(schema)
---
(false) && (instance.is_string())
